updae java sdk from 17 to 11