@@ -1,10 +1,11 @@
 package com.example.userdemo.user;
 
-import jakarta.persistence.EntityNotFoundException;
+import javax.persistence.EntityNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -19,7 +20,7 @@ public class UserService {
     public List<UserResponse> listUsers() {
         return userRepository.findAll().stream()
                 .map(UserResponse::from)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public UserResponse getUser(Long userId) {
@@ -28,15 +29,15 @@ public class UserService {
 
     @Transactional
     public UserResponse createUser(UserRequest request) {
-        User user = new User(request.username(), request.organization());
+        User user = new User(request.getUsername(), request.getOrganization());
         return UserResponse.from(userRepository.save(user));
     }
 
     @Transactional
     public UserResponse updateUser(Long userId, UserRequest request) {
         User user = findUser(userId);
-        user.setUsername(request.username());
-        user.setOrganization(request.organization());
+        user.setUsername(request.getUsername());
+        user.setOrganization(request.getOrganization());
         return UserResponse.from(userRepository.save(user));
     }
 
